Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-3991

[gandiva] floating point division shouldn't cause errors

    XMLWordPrintableJSON

Details

    Description

      for division, gandiva explicitly checks if the divisor is zero and raises an error.

      This is correct for integer division. For float point divisions, it should just return infinity.

      https://www.gnu.org/software/libc/manual/html_node/Infinity-and-NaN.html#Infinity-and-NaN

      Attachments

        Issue Links

          Activity

            People

              pravindra Pindikura Ravindra
              pravindra Pindikura Ravindra
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 1h 20m
                  1h 20m