cpp/src/gandiva/precompiled/extended_math_ops_test.cc
@@ -65,18 +65,9 @@ TEST(TestExtendedMathOps, TestPower) {
 }
 
 TEST(TestExtendedMathOps, TestLogWithBase) {
-  gandiva::ExecutionContext context;
-  float64 out =
-      log_int32_int32(reinterpret_cast<int64>(&context), 1 /*base*/, 10 /*value*/);
-  EXPECT_EQ(out, 0);
-  EXPECT_EQ(context.has_error(), true);
-  EXPECT_TRUE(context.get_error().find("divide by zero error") != std::string::npos)
-      << context.get_error();
-
-  gandiva::ExecutionContext context1;
-  out = log_int32_int32(reinterpret_cast<int64>(&context), 2 /*base*/, 64 /*value*/);
-  EXPECT_EQ(out, 6);
-  EXPECT_EQ(context1.has_error(), false);
+  EXPECT_EQ(log_int32_int32(1 /*base*/, 10 /*value*/),
+            std::numeric_limits<double>::infinity());
+  EXPECT_EQ(log_int32_int32(2 /*base*/, 64 /*value*/), 6);
 }
 
 }  // namespace gandiva
